# jpeg_encoder

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.dev  basicConfig.h.in  readme.md
include/: codec.h  huffmanValues.h  jpegCodec.h  stb_image_write.h
src/: main.cpp
src/jpegCodec/: jpeg_dct.cpp  jpeg_headers.cpp  jpeg_main.cpp
